@@ -1,124 +1,11 @@
-//package org.example.case_study_module_6.config;
-//
-//import org.example.case_study_module_6.security.JwtAuthenticationFilter;
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.http.HttpMethod;
-//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-//import org.springframework.security.crypto.password.PasswordEncoder;
-//import org.springframework.security.web.SecurityFilterChain;
-//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-//
-//import java.util.List;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.CorsConfigurationSource;
-//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-//
-//import java.util.Arrays;
-//import java.util.List;
-//
-//@Configuration
-//public class SecurityConfig {
-//
-//    private final JwtAuthenticationFilter jwtFilter;
-//
-//    public SecurityConfig(JwtAuthenticationFilter jwtFilter) {
-//        this.jwtFilter = jwtFilter;
-//    }
-//
-//    @Bean
-//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-//
-//        http
-//                // 1. Tắt CSRF (để cho phép POST/PUT/DELETE)
-//                .csrf(csrf -> csrf.disable())
-//                .cors(cors -> {
-//                })
-//
-//                // 2. Cấu hình CORS (quan trọng để React gọi được)
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//
-//                // 3. Phân quyền: Tạm thời cho phép TẤT CẢ (permitAll)
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//
-//                .authorizeHttpRequests(auth -> auth
-//                        .requestMatchers("/auth/**").permitAll()
-//                        .requestMatchers("/v1/api/**", "/swagger-ui/**", "/v3/api-docs/**",
-//                                "/swagger-ui.html").permitAll().requestMatchers("/api/flights/**").permitAll()
-//                        .requestMatchers("/api/master/**").permitAll()
-////                        .anyRequest().authenticated()
-//                        .requestMatchers("/auth/**").permitAll() // API đăng nhập/đăng ký
-//                        .requestMatchers("/api/**").permitAll()  // API khách hàng
-//                        .anyRequest().permitAll()                // Cho phép hết để test cho dễ
-//                )
-//
-//                // Vẫn giữ filter nhưng vì đã permitAll nên không có token vẫn qua được
-//
-//                        // 🔥 PERMIT CẢ 2 PATH
-//                        .requestMatchers("/auth/**", "/axios/auth/**", "/error").permitAll()
-//                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-//                        .anyRequest().authenticated()
-//                )
-//
-//                // 🔥 JWT filter
-//                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-//
-//        return http.build();
-//    }
-//
-//    // ✅ CORS CONFIG TOÀN CỤC
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration config = new CorsConfiguration();
-//
-//        config.setAllowedOrigins(List.of("http://localhost:5173"));
-//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(List.of("*"));
-//        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", config);
-//        return source;
-//    }
-//
-//    // ✅ Password encoder
-//
-//    // Bean cấu hình CORS chi tiết
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        // Cho phép React chạy ở cổng 5173 (Vite)
-//        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-//
-//        // Cho phép các phương thức HTTP
-//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-//
-//        // Cho phép tất cả các Header (Authorization, Content-Type...)
-//        configuration.setAllowedHeaders(Arrays.asList("*"));
-//
-//        // Cho phép gửi credentials (nếu cần sau này)
-//        configuration.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
-//
-//    @Bean
-//    public PasswordEncoder passwordEncoder() {
-//        return new BCryptPasswordEncoder();
-//    }
-//}
 package org.example.case_study_module_6.config;
 
 import org.example.case_study_module_6.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -142,27 +29,35 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Tắt CSRF (để cho phép POST/PUT/DELETE)
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> {
-                })
+                // 1. Tắt CSRF (để cho phép POST/PUT/DELETE từ React)
+                .csrf(AbstractHttpConfigurer::disable)
 
-                // 2. Cấu hình CORS (quan trọng để React gọi được)
+                // 2. Kích hoạt CORS với cấu hình bên dưới
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // 3. Phân quyền: Tạm thời cho phép TẤT CẢ (permitAll)
+                // 3. Phân quyền truy cập
                 .authorizeHttpRequests(auth -> auth
-                                .requestMatchers("/auth/**").permitAll()
-                                .requestMatchers("/v1/api/**", "/swagger-ui/**", "/v3/api-docs/**",
-                                        "/swagger-ui.html").permitAll().requestMatchers("/api/flights/**").permitAll()
-                                .requestMatchers("/api/master/**").permitAll()
-//                        .anyRequest().authenticated()
-                                .requestMatchers("/auth/**").permitAll() // API đăng nhập/đăng ký
-                                .requestMatchers("/api/**").permitAll()  // API khách hàng
-                                .anyRequest().permitAll()                // Cho phép hết để test cho dễ
+                        // --- NHÓM CÔNG KHAI (Không cần đăng nhập) ---
+
+                        // Swagger UI
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+
+                        // Auth & Master Data
+                        .requestMatchers("/auth/**", "/api/master/**", "/api/flights/**").permitAll()
+
+                        // Customers & News (Theo yêu cầu của bạn)
+                        .requestMatchers("/api/customers/**", "/api/news/**").permitAll()
+
+                        // Cho phép phương thức OPTIONS (tránh lỗi CORS pre-flight)
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // --- QUY TẮC CUỐI CÙNG (BẮT BUỘC ĐỂ Ở CUỐI) ---
+                        // Tạm thời cho phép tất cả để test dễ dàng.
+                        // Sau này muốn bảo mật thì đổi .permitAll() thành .authenticated()
+                        .anyRequest().permitAll()
                 )
 
-                // Vẫn giữ filter nhưng vì đã permitAll nên không có token vẫn qua được
+                // 4. Thêm JWT Filter
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -172,16 +67,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Cho phép React chạy ở cổng 5173 (Vite)
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+
+        // Cho phép các nguồn Frontend (Thêm cả 5174 đề phòng bạn chạy port khác)
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5174"));
 
         // Cho phép các phương thức HTTP
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-        // Cho phép tất cả các Header (Authorization, Content-Type...)
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Cho phép tất cả các Header
+        configuration.setAllowedHeaders(List.of("*"));
 
-        // Cho phép gửi credentials (nếu cần sau này)
+        // Cho phép gửi credentials (Cookie/Auth Header)
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
